Fix the position of collapse/expand button; Add Graph Search State Stack UI

--- a/src/BFS/BFS.css
+++ b/src/BFS/BFS.css
@@ -9,9 +9,30 @@ p {
     margin-left: -10px;
     margin-right: -10px;
     padding-top: 60px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
     background-color: rgba(38, 38, 38, 1);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+}
+
+.collapse-button {
+    padding-top:1rem;
+}
+
+.intro-section-collapsed {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 21px;
+    text-align: left;
+    flex-direction:row;
+    justify-content:space-between;
+}
+
+.expand-button {
+    padding-top: 2rem;
+    padding-right: 6.2%;
 }
 
 .intro-section-content {
@@ -30,19 +51,22 @@ p {
     transition: height 0.8s ease-in;
 }
 
-.intro-section-collapsed {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 21px;
-    text-align: left;
+.operation-section {
+    display: flex;
+    justify-content:space-between;
+}
+
+.search-status-stack-section {
+    margin-right: 10rem;
 }
 
 .operation-node-section {
     justify-content:center;
     flex-wrap: wrap;
+    max-width: 55rem;
     margin-top: 3rem;
-    padding-left: 20rem;
-    padding-right: 20rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
     display:flex;
 }
 
@@ -55,7 +79,13 @@ p {
     border-radius:50%;
 }
 
+.operation-node-clicked {
+    background-color:red;
+    color:white;
+}
+
 .operation-node p {
+    user-select: none;
     padding-top: 0.3rem;
     padding-left: 0;
     padding-right:0;
